# ChangeLog for sci-libs/Fiona
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/Fiona/ChangeLog,v 1.8 2015/04/03 12:41:25 jlec Exp $

  03 Apr 2015; Justin Lecher <jlec@gentoo.org> Fiona-1.1.6.ebuild,
  Fiona-1.4.1.ebuild, Fiona-9999.ebuild:
  Fix usage of distutils-r1.eclass

  27 Mar 2015; Sławek Lis <slis@gentoo.org> +files/scriptname.patch,
  Fiona-1.4.1.ebuild:
  Fixed: 544240, updated dependencies

  08 Jan 2015; Justin Lecher <jlec@gentoo.org> Fiona-1.1.6.ebuild,
  Fiona-1.4.1.ebuild, Fiona-9999.ebuild:
  Fix SLOTs and dependencies

  28 Nov 2014; Pacho Ramos <pacho@gentoo.org> Fiona-1.1.6.ebuild,
  Fiona-9999.ebuild:
  Support python 3.4

*Fiona-1.4.1 (07 Oct 2014)

  07 Oct 2014; Sławek Lis <slis@gentoo.org> +Fiona-1.4.1.ebuild:
  new slot added

*Fiona-1.1.6 (07 Oct 2014)

  07 Oct 2014; Sławek Lis <slis@gentoo.org> +Fiona-1.1.6.ebuild,
  -Fiona-1.1.2.ebuild:
  version bump, remove old

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> Fiona-1.1.2.ebuild,
  Fiona-9999.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-
  unittest2 (those packages were only required for <=python-2.6).

*Fiona-9999 (03 Mar 2014)
*Fiona-1.1.2 (03 Mar 2014)

  03 Mar 2014; Sławek Lis <slis@gentoo.org> +Fiona-1.1.2.ebuild,
  +Fiona-9999.ebuild, +metadata.xml:
  Added Fiona package