@@ -1,0 +1,13 @@
+DEFINED_PHASES=install postinst postrm preinst prepare setup unpack
+DEPEND=>=sys-apps/sed-4
+DESCRIPTION=A fast and secure web browser
+EAPI=5
+HOMEPAGE=http://www.opera.com/
+IUSE=+linguas_af +linguas_az +linguas_be +linguas_bg +linguas_bn +linguas_ca +linguas_cs +linguas_da +linguas_de +linguas_el +linguas_en_GB +linguas_en_US +linguas_es_419 +linguas_es +linguas_fil +linguas_fi +linguas_fr_CA +linguas_fr +linguas_fy +linguas_gd +linguas_hi +linguas_hr +linguas_hu +linguas_id +linguas_it +linguas_ja +linguas_kk +linguas_ko +linguas_lt +linguas_lv +linguas_me +linguas_mk +linguas_ms +linguas_nb +linguas_nl +linguas_nn +linguas_pa +linguas_pl +linguas_pt_BR +linguas_pt_PT +linguas_ro +linguas_ru +linguas_sk +linguas_sr +linguas_sv +linguas_sw +linguas_ta +linguas_te +linguas_th +linguas_tr +linguas_uk +linguas_uz +linguas_vi +linguas_zh_CN +linguas_zh_TW +linguas_zu
+KEYWORDS=~x86
+LICENSE=OPERA-2014
+RDEPEND=dev-libs/expat dev-libs/glib:2 dev-libs/nspr dev-libs/nss gnome-base/gconf:2 media-libs/alsa-lib media-libs/fontconfig media-libs/freetype net-misc/curl net-print/cups sys-apps/dbus x11-libs/cairo x11-libs/gdk-pixbuf x11-libs/gtk+:2 x11-libs/libX11 x11-libs/libXScrnSaver x11-libs/libXcomposite x11-libs/libXcursor x11-libs/libXdamage x11-libs/libXext x11-libs/libXfixes x11-libs/libXi x11-libs/libXrandr x11-libs/libXrender x11-libs/libXtst x11-libs/pango[X]
+SLOT=0
+SRC_URI=x86? ( http://get.geo.opera.com/pub/opera-developer/30.0.1833.0/linux/opera-developer_30.0.1833.0_i386.deb )
+_eclasses_=chromium	4a9f555199b35aa57f60b0e9b9627d2a	eutils	9fb270e417e0e83d64ca52586c4a79de	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	linux-info	2b8c53f6065bdee2d757472215a3088f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	unpacker	f300a7ca9131b1024a79762e8edd3c52	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=b14028da020c94c1738881045d44a2bc
