@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST opera-developer_30.0.1812.0_amd64.deb 41982576 SHA256 d5df1bb656532b762c1c1dbe729fb2c3b53db3b38337d7d28e4ed4f6464c864e SHA512 aaa3b152a7f9245742a0bf8affe73abc3ce779c342a797bc9709104e8f443390de65c74b9f9b4df2c8233e134d83fafe7616397aca72de4489f4020f051bd965 WHIRLPOOL 5ae6edc105ce9ff0c38306494f1d65dbf81bdf61d270b43cd5d8920d6358021be2185f69ec0ec66fa65d297bcda308a0e8f2d72492fe488d1a54f2875fe3c32b
 DIST opera-developer_30.0.1820.0_amd64.deb 41683110 SHA256 8ce342211b0e60073f25d581e12c4e0e2692b73095c03dc4756e965e697917f1 SHA512 8d0e15110bc302863384eea8baaee248f3441479e8ea9c73a16f06c5b0f94f060c0e4b183b9eb4a616a6ed50e5aec8c8b7e210aabb079170e9640e10873f4f65 WHIRLPOOL 3d5d83330d3f8c0beb3340a7dced9dae0b2afee50901e4f730378f394edbc965025213d82e58cb9fff7f972ffc720db0c18de3509983e878a1b956677b5436f5
+DIST opera-developer_30.0.1833.0_i386.deb 43910280 SHA256 80bf8e1c419925be17b16525de0e08479f6994bc1b9b52153a3017c1d177501b SHA512 adad486c0efeb4b22c55ac45bb431bcf43ae15d1d511ebf7b1d74c786ab84df85397350a4628cbaf6dc9f5f4bc3eed5f7d6c0a2a62b2d270e98d521a201f0b46 WHIRLPOOL 1c89d4a3866316b3c1f4c88e2072344643d2cd971a92a9314c775016747f584e5e5e83e9a42abf2b00067c2fae1d1da5d41dc279370cb4be1c87668705c94d21
 EBUILD opera-developer-30.0.1812.0.ebuild 1913 SHA256 ccacd1a2db9c957b7a31a8df6506197f189a8ecad630b75109e1f0c1a5a525bf SHA512 5beac798d9f21b4ed7ae64489d58cd97ef3a51cb5aba95b5c6d6a258522f270fe930ee4bbd2518c01207dcb2ab28172df444c4349ee76e307eb28892f40c2b10 WHIRLPOOL aa0755d2795c581633dc766646ef39c9d8a5a65dc1ad1b9d9e3244bdc63aa5c525b302fd06c9003f88b9f1c2353740775cf0a3139ff2f4c4c7e6d8d4810d844b
 EBUILD opera-developer-30.0.1820.0.ebuild 1913 SHA256 8cd44f8d1bc2e7fc27159792d894a3b91df5acd2650caebe3d80cb60000c046c SHA512 25bb58258df8a7ba8f2529861d90c1ac1e1acf57f4f778cb8ca496aa6bf91eff69dabc0e3386a72ef7cd546f4802ef416005c554b1cb6b5ac84b2de8f970213e WHIRLPOOL 1d2b361daca3a1af28ded883f30e3f0276726529451035a77aadbdf8405f4220c999f85ba050f66406834fa94d9d4e3127fdc8bd9b30e7739476933f192dd2bf
-MISC ChangeLog 6979 SHA256 dc35fc689b52e5956f98937e54d5e1c1126d004dd0ef0b03faf66f24c7879f05 SHA512 3f434254b2771dd5af33eddddbc6b2a585c31ea43a3a524403194dfd11441333fcaebe967d5de6329607aef54698575e0e4188702852e24ab49e880a6e1f619b WHIRLPOOL 81bbe69d135f864c9689ea129746ceecccaeebccf07c97e1e30da0474be2c7912ea3aaf31cd25f2f89d7844da97ffcba3994f44a920b5a4f2a88b5598d694686
+EBUILD opera-developer-30.0.1833.0.ebuild 2024 SHA256 51e1eb845014eb231952da41a2de8ccef2abffd871924b602a3138fbadeaafb2 SHA512 6428db4cc2bdf7de05e0b377948130dad4580c49f564362eeda71256d2dc3d6332cb945dc4afd6dfcce81ad2f1c9e93017ddf5b40899da31037e6b7ac6c2f59f WHIRLPOOL c00e280d54a5eac7bc2a331f4cd91301e6c9bf4b97d0c9e4a1cd1e6049b9d17e833c92f11b2bf67733f7be81313d7a0169e78918b65bc5e2bec5fa6453afada7
+MISC ChangeLog 7126 SHA256 c2a8aad6668b4079b039818d18090f48cb8218c89338b2ad65f024c09a29c07b SHA512 1ac2c0c109dbeb4f38d82f0050f1b985f834812e359270ab378909b75a8a3c5872e44bb13b24447b92983ee86d20d497022d73a25d209a8004eaf74c80416eea WHIRLPOOL 3b1205c00cf246591f969572fc1b35909f583610627baafd166cd1b48bf41d816fae1ce7fe6c61af64ee3d66e03b68fee00e3dc61a3d9da614e32accc35791f0
 MISC metadata.xml 224 SHA256 d7ffc52704d4bc0180f6f1c448ea4bdd0e3ff3a562384dc944af4a00debc9620 SHA512 6487ad35c6f3d2e4876714919e7bb01fd65f57e7753cbfc318130727dded4fcf8632a06ab9b7a3016fc1ab127434d1d20de2dd0ef2cc63ad162023f2dbf64b1e WHIRLPOOL 879ad2c41f2e1297b677803b2b0478ed2affc91059b198524795e1a128cf8ab6b9fbe78b53bdd3421041f27b419bce387a267e389111125cd55b05e260abc998
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUbc8QACgkQVWmRsqeSphPToACdHGFFjoWj3JkXhWUnzKmI5mgY
-u0kAn2T4TBRiP/CwWWIK40CDQKF7rWJE
-=CUM7
+iEYEAREIAAYFAlUvRHgACgkQVWmRsqeSphPe8QCfaQbQnlRQGZvA3lc+3CzaUdSb
+wA0An1RSPQJA/E5ljhXyGIiry1j7Aw2h
+=klEn
 -----END PGP SIGNATURE-----
