@@ -1,6 +1,12 @@
 # ChangeLog for www-client/opera-developer
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera-developer/ChangeLog,v 1.41 2015/04/01 04:27:47 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera-developer/ChangeLog,v 1.42 2015/04/16 05:11:19 jer Exp $
+
+*opera-developer-30.0.1833.0 (16 Apr 2015)
+
+  16 Apr 2015; Jeroen Roovers <jer@gentoo.org>
+  +opera-developer-30.0.1833.0.ebuild:
+  Version bump.
 
 *opera-developer-30.0.1820.0 (01 Apr 2015)
 
