@@ -1,6 +1,11 @@
 # ChangeLog for sci-libs/Fiona
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/Fiona/ChangeLog,v 1.8 2015/04/03 12:41:25 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/Fiona/ChangeLog,v 1.9 2015/04/16 05:19:08 slis Exp $
+
+*Fiona-1.5.1 (16 Apr 2015)
+
+  16 Apr 2015; Sławek Lis <slis@gentoo.org> +Fiona-1.5.1.ebuild:
+  Version bump
 
   03 Apr 2015; Justin Lecher <jlec@gentoo.org> Fiona-1.1.6.ebuild,
   Fiona-1.4.1.ebuild, Fiona-9999.ebuild:
